css/style.css
/* ... */
.tf__toggle_link h3 {
  font-size: 22px;
  font-weight: 600;
  margin-bottom: 30px;
}

.tf__toggle_link ul {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  gap: 10px;
}

.tf__toggle_link ul li a {
  width: 35px;
  height: 35px;
  line-height: 35px;
  text-align: center;
  background: #ffffff1a;
  border-radius: 50%;
  font-size: 16px;
  font-weight: 400;
  color: var(--colorWhite);
  transition: all linear 0.3s;
  -webkit-transition: all linear 0.3s;
  -moz-transition: all linear 0.3s;
  -ms-transition: all linear 0.3s;
  -o-transition: all linear 0.3s;
}

.tf__toggle_link ul li a:hover {
  background: var(--colorPrimary);
  color: var(--colorBlack);
}

/* manu end */

/* banner start */
.tf__banner {
  background-position: center !important;
  background-repeat: no-repeat !important;
  background-size: cover !important;
  height: 100vh;
  position: relative;
}

.tf__banner div {
  /* height: 100%; */
}

.tf__banner_img {
  width: 750px;
  height: 750px !important;
  position: relative;
}

.tf__banner_img::after {
  position: absolute;
  content: "";
  background: url(../images/circle.png);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  width: 755px;
  height: 755px;
  top: 0px;
  left: 0px;
  animation: rotate_animi linear 60s infinite;
  -webkit-animation: rotate_animi linear 60s infinite;
}

.tf__banner_text {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.tf__banner_text h1 {
  font-size: 56px;
  font-weight: 800;
  margin-bottom: 25px;
}

.tf__banner_text h3 {
  font-size: 20px;
  font-weight: 800;
  margin-bottom: 10px;
  color: var(--colorPrimary);
}

.tf__banner_text p {
  max-width: 80%;
}

.tf__banner_text ul {
  margin-top: 50px;
}

.tf__banner_text ul li {
  margin-right: 40px;
}

.tf___video_btn {
  color: var(--colorWhite) !important;
  background: var(--colorDarkAccent) !important;
}

.tf___video_btn i {
  margin-left: 0 !important;
  margin-right: 8px !important;
  color: var(--colorPrimary);
}

/* banner end */

/* about start */
.tf__about {
  background: var(--colorBlack);
}

.tf__about_text {
  margin-top: 80px;
  width: 608px !important;
  position: relative;
  z-index: 2;
}

.tf__about_text h2 {
  margin-bottom: 0;
}

.tf__about_text p {
  margin-top: 45px;
  line-height: 25px;
}

.tf__about_img {
  height: 660px;
  position: relative;
  overflow: hidden;
}

.about-gallery img {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: contain !important;
  opacity: 0;
  transform: translateX(-100%);
  transition: transform 0.8s ease-in-out, opacity 0.8s ease-in-out;
}

.about-gallery img.active {
  opacity: 1;
  transform: translateX(0);
  z-index: 1;
}

.about-gallery img.exit {
  transform: translateX(100%);
  opacity: 0;
  z-index: 0;
}

/* about end */

/* service start */
.tf__service {
  background: var(--colorBlack);
}

.tf__single_service {
  margin-top: 40px;
  margin-bottom: 30px;
}

.tf__single_service_img {
  height: 310px;
  position: relative;
}

.tf__single_service_img span {
  position: absolute;
  top: -50px;
  left: 30px;
  width: 94px;
  height: 100px;
  font-size: 46px;
  line-height: 100px;
  text-align: center;
  color: var(--colorBlack);
  background: var(--colorPrimary);
  transition: all linear 0.3s;
  -webkit-transition: all linear 0.3s;
  -moz-transition: all linear 0.3s;
  -ms-transition: all linear 0.3s;
  -o-transition: all linear 0.3s;
}

.tf__single_service_text {
  margin-top: 20px;
}

.tf__single_service_text a {
  display: block;
  font-size: 24px;
  font-weight: 800;
  margin-bottom: 10px;
  text-transform: capitalize;
  color: var(--colorWhite);
  transition: all linear 0.3s;
  -webkit-transition: all linear 0.3s;
  -moz-transition: all linear 0.3s;
  -ms-transition: all linear 0.3s;
  -o-transition: all linear 0.3s;
}

.tf__single_service_text p {
  line-height: 25px;
}

 .tf__single_service:hover .tf__single_service_img span {
  background: var(--colorSecondary);
  color: var(--colorWhite);
} 

.tf__single_service_text a:hover {
  color: var(--colorPrimary);
}

/* service end */

/* skill start */
.tf__skill {
  background: var(--colorBlack);
}

.tf__skiil_heading h2 {
  margin-bottom: 12px !important;
}

.tf__single_skill {
  margin-top: 50px;
  padding-bottom: 50px;
  border-bottom: 1px solid #f9f9f642;
}

.tf__single_skill_left h6 {
  font-size: 24px;
  font-weight: 800;
  text-transform: capitalize;
  margin-bottom: 10px;
}

.tf__single_skill_left span {
  font-size: 14px;
  font-weight: 600;
  text-transform: uppercase;
  color: var(--colorWhite);
}

.tf__single_skill_left p {
  font-size: 18px;
  font-style: normal;
  font-weight: 400;
  margin-top: 10px;
  color: var(--colorPrimary);
}

.tf__single_skill_middle {
  padding: 20px 40px;
}

.tf__team_skills_bar_single {
  height: 100%;
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  justify-content: center;
  align-items: start;
}

.tf__team_skills_bar_single p {
  color: var(--colorWhite);
  font-size: 14px;
  font-weight: 400;
  margin-bottom: 20px;
}

/* skill end */

/* semester progress bar start */
.barfiller.barfiller-semesters {
  overflow: visible;
}

.barfiller-semesters .mark {
  position: absolute;
  width: 2px;
  height: 12px; /* Taller than the bar (6px) */
  background-color: white;
  top: -3px;
  z-index: 2;
}

/* 7 semesters = 6 lines */
.barfiller-semesters .mark:nth-of-type(1) { left: calc(100% / 7 * 1); }
.barfiller-semesters .mark:nth-of-type(2) { left: calc(100% / 7 * 2); }
.barfiller-semesters .mark:nth-of-type(3) { left: calc(100% / 7 * 3); }
.barfiller-semesters .mark:nth-of-type(4) { left: calc(100% / 7 * 4); }
.barfiller-semesters .mark:nth-of-type(5) { left: calc(100% / 7 * 5); }
.barfiller-semesters .mark:nth-of-type(6) { left: calc(100% / 7 * 6); }
/* ... */

